--- a/app/views/form.erb
+++ b/app/views/form.erb
@@ -1,1 +1,10 @@
-<h1>This is where we ask for a word</h1>
+<h1>WELCOME TO THE DICTIONARY!</h1>
+<form method="POST" action="/translation" class="form-inline">
+  <div class="form-group">
+    <!-- <label for="exampleInputName2">Search term</label> -->
+    <input type="text" name="word" placeholder="the word here">
+  </div>
+
+  <button type="submit" class="btn btn-primary">let's search!</button>
+</form>
+
