--- a/app/views/translation.erb
+++ b/app/views/translation.erb
@@ -1,3 +1,4 @@
 <h1>Here we're going to give a translation</h1>
 
 <%="The word we are looking for is #{@word}" %>
+<%= "We found: #{@translation}"  %>
