--- a/app/views/form.erb
+++ b/app/views/form.erb
@@ -1,10 +1,19 @@
-<h1>WELCOME TO THE DICTIONARY!</h1>
-<form method="POST" action="/translation" class="form-inline">
-  <div class="form-group">
-    <!-- <label for="exampleInputName2">Search term</label> -->
-    <input type="text" name="word" placeholder="the word here">
-  </div>
+<div class="wrapper" style="background-image: url('https://images.unsplash.com/photo-1457369804613-52c61a468e7d?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&s=b2c6578bcbf523cb7155dcc894ae32ba')">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2">
+        <h1>WELCOME TO THE DICTIONARY!</h1>
+        <form method="POST" action="/translation" class="form-inline" >
+          <div class="form-group">
+            <!-- <label for="exampleInputName2">Search term</label> -->
+            <input type="text" name="word" placeholder="the word here">
+          </div>
 
-  <button type="submit" class="btn btn-primary">let's search!</button>
-</form>
+          <button type="submit" class="btn btn-primary">let's search!</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
 
