--- a/app/views/translation.erb
+++ b/app/views/translation.erb
@@ -1,4 +1,12 @@
-<h1>Here we're going to give a translation</h1>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://hd.unsplash.com/photo-1468476396571-4d6f2a427ee7')">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2">
+        <h1>TRANSLATION</h1>
 
-<%="The word we are looking for is #{@word}" %>
-<%= "We found: #{@translation}"  %>
+        <%="The word we are looking for is #{@word}" %>
+        <%= "We found: #{@translation}"  %>
+      </div>
+    </div>
+  </div>
+</div>
